load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "sdl_image.go",
        "sdl_image_cgo_static.go",
        "sdl_image_wrapper.h",
    ],
    cgo = True,
    clinkopts = [
        "-Limg/.go-sdl2-libs",
    ] + select({
        "@io_bazel_rules_go//go/platform:android_arm": [
            "-lSDL2_image_android_arm -Wl,--no-undefined -lpng_android_arm -ljpeg_android_arm -lSDL2_android_arm -lm -ldl -lz -llog -landroid -lGLESv2",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "-lSDL2_image_darwin_amd64 -lSDL2_darwin_amd64 -lpng_darwin_amd64 -ljpeg_darwin_amd64 -lm -lz -liconv -Wl,-framework,CoreAudio -Wl,-framework,AudioToolbox -Wl,-framework,ForceFeedback -lobjc -Wl,-framework,CoreVideo -Wl,-framework,Cocoa -Wl,-framework,Carbon -Wl,-framework,IOKit -Wl,-framework,Metal",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "-lSDL2_image_linux_386 -Wl,--no-undefined -lpng_linux_386 -ljpeg_linux_386 -lSDL2_linux_386 -lm -ldl -lz -lasound -lm -ldl -lpthread -lX11 -lXext -lXcursor -lXinerama -lXi -lXrandr -lXss -lXxf86vm -lpthread -lrt",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "-lSDL2_image_linux_amd64 -Wl,--no-undefined -lpng_linux_amd64 -ljpeg_linux_amd64 -lSDL2_linux_amd64 -lm -ldl -lz -lasound -lm -ldl -lpthread -lX11 -lXext -lXcursor -lXinerama -lXi -lXrandr -lXss -lXxf86vm -lpthread -lrt",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "-L/opt/vc/lib -L/opt/vc/lib64 -lSDL2_image_linux_arm -Wl,--no-undefined -lpng_linux_arm -ljpeg_linux_arm -lSDL2_linux_arm -lm -ldl -lz -liconv -lbcm_host -lvcos -lvchiq_arm -pthread",
        ],
        "@io_bazel_rules_go//go/platform:windows_386": [
            "-lSDL2_image_windows_386 -Wl,--no-undefined -lpng_windows_386 -ljpeg_windows_386 -lz_windows_386 -lSDL2_windows_386 -lSDL2main_windows_386 -mwindows -Wl,--no-undefined -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -lsetupapi -static-libgcc",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "-lSDL2_image_windows_amd64 -Wl,--no-undefined -lpng_windows_amd64 -ljpeg_windows_amd64 -lz_windows_amd64 -lSDL2_windows_amd64 -lSDL2main_windows_amd64 -mwindows -Wl,--no-undefined -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -lsetupapi -static-libgcc",
        ],
        "//conditions:default": [],
    }),
    copts = ["-Iimg/.go-sdl2-libs/include -Iimg/.go-sdl2-libs/include/SDL2"],
    importpath = "github.com/lukealonso/go-sdl2/img",
    visibility = ["//visibility:public"],
    deps = ["@com_github_veandco_go_sdl2//sdl:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["sdl_image_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_veandco_go_sdl2//sdl:go_default_library"],
)
