load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["painter.go"],
    importpath = "github.com/lukealonso/go-sdl2/raster",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_freetype//raster:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["painter_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_golang_freetype//raster:go_default_library"],
)
