load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "audio.go",
        "blendmode.go",
        "clipboard.go",
        "cpuinfo.go",
        "endian.go",
        "error.go",
        "events.c",
        "events.go",
        "events.h",
        "filesystem.go",
        "gamecontroller.go",
        "gesture.go",
        "haptic.go",
        "helpers.go",
        "hints.c",
        "hints.go",
        "hints.h",
        "joystick.go",
        "keyboard.go",
        "keycode.go",
        "loadso.go",
        "log.c",
        "log.go",
        "log.h",
        "mouse.go",
        "mutex.go",
        "pixels.go",
        "power.go",
        "rect.go",
        "render.go",
        "rwops.go",
        "scancode.go",
        "sdl.go",
        "sdl_cgo_static.go",
        "sdl_wrapper.h",
        "sensor.c",
        "sensor.go",
        "sensor.h",
        "surface.go",
        "sysrender.go",
        "system_android.go",
        "syswm.go",
        "timer.go",
        "touch.go",
        "version.go",
        "video.go",
        "vulkan.go",
    ],
    cdeps = select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "//go-sdl2-libs:darwin",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "//go-sdl2-libs:linux",
        ],
    }),
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "-lm -liconv -Wl,-framework,CoreAudio -Wl,-framework,AudioToolbox -Wl,-framework,ForceFeedback -lobjc -Wl,-framework,CoreVideo -Wl,-framework,Cocoa -Wl,-framework,Carbon -Wl,-framework,IOKit -Wl,-framework,Metal",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "-Wl,--no-undefined -lm -ldl -lasound -lm -ldl -lpthread -lX11 -lXext -lXcursor -lXinerama -lXi -lXrandr -lXss -lXxf86vm -lpthread -lrt",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/lukealonso/go-sdl2/sdl",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "audio_test.go",
        "clipboard_test.go",
        "cpuinfo_test.go",
        "events_test.go",
        "filesystem_test.go",
        "hints_test.go",
        "log_test.go",
        "power_test.go",
        "rect_test.go",
        "sdl_test.go",
        "struct_test.go",
        "surface_test.go",
        "timer_test.go",
        "video_test.go",
    ],
    embed = [":go_default_library"],
)
